2003-01-17  David N. Welton  <davidw@dedasys.com>

	* Added logos.

2003-01-08  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_ChildInit): Patch from Karl Lehenbauer to
	print out errorInfo upon ChildInit failure.

2003-01-07  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_UploadData): Fix from Holger Zeinert
	that makes file uploads work on windows.

2002-12-30  David N. Welton  <davidw@dedasys.com>

	* doc/examples/upload.html: Changed .ttml to .rvt - thanks to
	Holger Zeinert for catching this.

2002-12-18  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Noted the var_qs/var_post changes in the
	documentation.

2002-12-17  David N. Welton  <davidw@dedasys.com>

	* tests/post.test:
	* tests/post.rvt:
	* tests/get.test:
	* tests/get.rvt: Added tests for David Brancato's var_qs and
	var_post improvements.

	* src/TclWebapache.c: Made "ugly" for loops into while loops.
	Created macro to set up loop parameters correctly.

2002-12-14  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c: Redid indendation.

	* src/rivetCore.c: Implemented Tcl commands (via objv[0]) to
	retrieve variables from different, specified sources (query
	string, POST). (David Brancato).

	* src/mod_rivet.h: Added defines for variable sources. (David
	Brancato).

	* src/apache_request.c: Added functions to get query and post
	params. (David Brancato).

	* src/TclWebapache.c: Implemented TclWeb.h API change. (David
	Brancato).

	* src/TclWeb.h: Changed API to include a source option in order to
	indicate the origin (query string, POST) of a variable.  (David
	Brancato).

2002-12-13  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_InitTclStuff): Apache actually loads all
	the modules twice, just to see if it  can. This is a pain,
	because things don't seem to get  completely cleaned up on the
	Tcl side. So this little hack  should make us *really* load only
	the second time around.
